--- a/To do js/style.css
+++ b/To do js/style.css
@@ -1,102 +1,302 @@
-body 
-{
+body {
     margin: 0;
     padding: 0;
     background-color: black;
-    /* z-index: 1; */
-}
-.upper
-{
-    font-size: 40px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
-}
-.upper1
-{
-    color: blue;
-}
-.topbar
-{
+    font-family: system-ui;
+  }
+  
+  header {
     display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    padding-top: 30px;
-}
-.add
-{
-    font-size: 25px;
-    padding-left: 10px;
+    margin: 40px 10% 50px 10%;
+    justify-content: space-between;
+    align-items: center;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.for
-{
+    font-size: 40px;
+  }
+  
+  .Top {
+    display: none;
+  }
+  
+  .block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 130px;
+    height: 50px;
+  }
+  
+  #backIcon {
+    width: 40px;
+    height: 40px;
+    background: rgb(0, 0, 0);
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.box
-{
-    background-color: white;
+  
+  }
+  #back {
+    display: inline-block;
+    font-size: 40px;
+    width: 80px;
+    height: 50px;
+    margin-bottom: 5px;
+  }
+  
+  section {
+    position: relative;
+    margin: 80px 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    min-height: 40vh;
+  }
+  
+  #task {
+    font-weight: bolder;
+  }
+  
+  #list {
+    font-weight: lighter;
+  }
+  
+  .caption {
+    font-size: 25px;
+  }
+  
+  p {
+    margin: 80px 10%;
+  }
+  
+  #first {
+    width: 250px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .firsticon {
+    background: royalblue;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    position: relative;
+  }
+  
+  #plus {
+    position: absolute;
+    left: 50%;
+    top: 57%;
+    transform: translate(-50%, -60%);
+    color: black;
+    font-weight: bolder;
+  }
+  
+  .popup {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    height: 200px;
-    border-radius: 20px;
+    transform: translate(-50%, -50%);
+    display: flex;
     padding: 20px;
-}
-#task-Input
-{
-    width: 395px;
+    width: 300px;
+    background: white;
+    border-radius: 6px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: popTransition 0.5s ease-in 1;
+  }
+  
+  #first:hover {
+    cursor: pointer;
+  }
+  
+  button:hover {
+    cursor: pointer;
+  }
+  
+  #trash:hover {
+    cursor: pointer;
+  }
+  .cardHead:hover {
+    cursor: pointer;
+  }
+  
+  .backs:hover {
+    cursor: pointer;
+  }
+  
+  #ToptoAdd:hover {
+    cursor: pointer;
+  }
+  
+  #popupHead {
+    font-size: 20px;
+    font-weight: 400;
+    color: orangered;
+    margin-bottom: 20px;
+  }
+  
+  #popupInput {
+    margin-bottom: 20px;
+    width: 250px;
     height: 30px;
-}
-.modal
-{
-    background-color: rgba(0, 0, 0, 0.594);
-    backdrop-filter: blur(2px);
-    height: 100vh;
-    width: 100vw;
+    text-align: center;
+    border-radius: 6px;
+    border-style: groove;
+    box-shadow: 1px 1px 3px 0 gray;
+  }
+  
+  .buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 200px;
+  }
+  
+  .buttons button {
+    color: blanchedalmond;
+    background: orangered;
+    border-radius: 20px;
+    width: 80px;
+    height: 30px;
+    border-style: hidden;
+  }
+  
+  /* Creating Transition */
+  @keyframes popTransition {
+    0% {
+      transform: translate(-50%, -20%);
+      opacity: 0.1;
+    }
+    100% {
+      transform: translate(-50%, -50%);
+      opacity: 1;
+    }
+  }
+  
+  .todoCard {
+    min-height: 300px;
+    width: 20%;
+    min-width: 200px;
+    background-color: white;
+    border: 2px solid royalblue;
+    border-radius: 5px;
+    position: relative;
+    margin: 0px 10px 20px 10px;
+    padding-bottom: 40px;
+  }
+  
+  .cardHead {
+    font-size: 24px;
+    color: orangered;
+    padding: 10px;
+    border-bottom: 2px solid black;
+    text-align: center;
+    font-weight: bold;
+  }
+  
+  .subTaskButtons {
     position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-}
-.item-modal
-{
-    background-color: rgba(0, 0, 0, 0.594);
-    backdrop-filter: blur(2px);
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-}
-#item-input
-{
-    width: 395px;
-    height: 30px; 
-}
-.single-task-modal
-{
-    display: none;
-    height: 100vh;
-}
-
-.down
-{
+    bottom: 10px;
+    right: 10px;
+    width: 70px;
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
-}
-.taskContainer
-{
+  }
+  
+  .subTaskRow {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+  }
+  
+  .markDone {
+    color: white;
+    background-color: blue;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-left: 5px;
+  }
+  
+  .subTask {
+    color: black;
+    font-weight: bold;
+  }
+  
+  .checkedSubTask {
+    color: blue;
+    text-decoration: line-through;
+  }
+  
+  #trash {
+    background: rgb(0, 250, 255);
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 20px;
-    padding: 20px;
-}
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+  }
+  
+  .createSubTask {
+    background: rgb(117, 255, 0);
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-weight: bold;
+    border-style: hidden;
+  }
+  
+  .centerCard {
+    visibility: visible;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /* Applying Media Queries */
+  @media (max-width: 580px) {
+    section {
+      justify-content: center;
+    }
+  
+    header {
+      font-size: 30px;
+      position: relative;
+      right: 28px;
+    }
+  
+    #backIcon {
+      width: 30px;
+      height: 30px;
+      background: rgb(0, 0, 0);
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid white;
+      cursor: pointer;
+    }
+    
+    #back {
+      display: inline-block;
+      font-size: 20px;
+      width: 80px;
+      height: 50px;
+      margin-bottom: 5px;
+      padding-top: 20px;
+    }
+  }
